--- a/public/templates/about.html
+++ b/public/templates/about.html
@@ -1,1 +1,6 @@
-<h1>about</h1>
+<h1>About</h1>
+
+<p>Broadway Bound is here to provide you with a comprehensive guide to experiencing live theater in your area.  We'd like to make your search for the most entertaining production a lot easier, enabling you to find reviews, and allowing you feedback on shows you have seen or want to see.  Broadway Bound is uniting the theater going community.</p>
+
+<p>Broadway Bound is the brainchild of Kinnik Sky.  She’s done more than 30 stage plays over the last 15 years.  Her major theatre credits include: Dreamgirls, For Colored Girls and Madea’s Class Reunion. Hollywood and Broadway have also taken notice of her star power.  Award-winning directors and producers Tyler Perry, Robert Townsend, and Kenny Leon have each cast Kinnik in their respective projects, tapping into her amazing vocal range and innate acting ability.  Her proudest accomplishment to date is writing, producing and starring in the stage production, Sunday Mourning (under her Dazzal Mi Entertainment production company), which won three NAACP Theater Awards for “Best Female Lead” (Kinnik Sky), “Best Female Supporting,” and “Best Male Supporting.” The play received a total of seven NAACP Theatre Award nominations, including her nomination for “Best Playwright.</p>
+
