--- a/public/templates/register.html
+++ b/public/templates/register.html
@@ -13,7 +13,7 @@
     <div class="row">
       <label for="emailAddress" class="left-jus col-md-offset-3">Email Address</label>
       <div class="form-group col-md-6 col-md-offset-3">
-        <input type="text" id="emailAddress" class="form-control" placeholder="Working email, only please!" ng-model="vm.userData.emailAddress" required />
+        <input type="text" id="emailAddress" class="form-control" placeholder="Working email, only please!" ng-model="vm.userData.email" required />
       </div>
     </div>
     <div class="row">
